crates/toml_edit/tests/fixtures/invalid/float-underscore-after-point.stderr
TOML parse error at line 1, column 9
  |
1 | bad = 1._2
  |         ^
Invalid floating-point number
Expected digit
